@@ -1,0 +1,302 @@
+begin_unit
+begin_package
+DECL|package|org.apache.lucene.index
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+package|;
+end_package
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MergePolicy
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MergeTrigger
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|SegmentCommitInfo
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|SegmentInfos
+import|;
+end_import
+begin_comment
+comment|/*  * A {@link MergePolicy} that only returns forced merges.  *<p><b>NOTE</b>: Use this policy if you wish to disallow background  * merges but wish to run optimize/forceMerge segment merges.  *  *  @lucene.experimental  */
+end_comment
+begin_class
+DECL|class|ForceMergePolicy
+specifier|public
+specifier|final
+class|class
+name|ForceMergePolicy
+extends|extends
+name|MergePolicy
+block|{
+DECL|field|in
+specifier|final
+name|MergePolicy
+name|in
+decl_stmt|;
+comment|/** Create a new {@code ForceMergePolicy} around the given {@code MergePolicy} */
+DECL|method|ForceMergePolicy
+specifier|public
+name|ForceMergePolicy
+parameter_list|(
+name|MergePolicy
+name|in
+parameter_list|)
+block|{
+name|this
+operator|.
+name|in
+operator|=
+name|in
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|findMerges
+specifier|public
+name|MergeSpecification
+name|findMerges
+parameter_list|(
+name|MergeTrigger
+name|mergeTrigger
+parameter_list|,
+name|SegmentInfos
+name|segmentInfos
+parameter_list|,
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|findForcedMerges
+specifier|public
+name|MergeSpecification
+name|findForcedMerges
+parameter_list|(
+name|SegmentInfos
+name|segmentInfos
+parameter_list|,
+name|int
+name|maxSegmentCount
+parameter_list|,
+name|Map
+argument_list|<
+name|SegmentCommitInfo
+argument_list|,
+name|Boolean
+argument_list|>
+name|segmentsToMerge
+parameter_list|,
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|findForcedMerges
+argument_list|(
+name|segmentInfos
+argument_list|,
+name|maxSegmentCount
+argument_list|,
+name|segmentsToMerge
+argument_list|,
+name|writer
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|findForcedDeletesMerges
+specifier|public
+name|MergeSpecification
+name|findForcedDeletesMerges
+parameter_list|(
+name|SegmentInfos
+name|segmentInfos
+parameter_list|,
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|findForcedDeletesMerges
+argument_list|(
+name|segmentInfos
+argument_list|,
+name|writer
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|useCompoundFile
+specifier|public
+name|boolean
+name|useCompoundFile
+parameter_list|(
+name|SegmentInfos
+name|segments
+parameter_list|,
+name|SegmentCommitInfo
+name|newSegment
+parameter_list|,
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|useCompoundFile
+argument_list|(
+name|segments
+argument_list|,
+name|newSegment
+argument_list|,
+name|writer
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|size
+specifier|protected
+name|long
+name|size
+parameter_list|(
+name|SegmentCommitInfo
+name|info
+parameter_list|,
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|size
+argument_list|(
+name|info
+argument_list|,
+name|writer
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"ForceMergePolicy("
+operator|+
+name|in
+operator|+
+literal|")"
+return|;
+block|}
+block|}
+end_class
+end_unit
