@@ -1,0 +1,75 @@
+begin_unit
+begin_package
+DECL|package|org.apache.lucene.index
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+package|;
+end_package
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|LuceneTestCase
+import|;
+end_import
+begin_class
+DECL|class|TestForceMergePolicy
+specifier|public
+class|class
+name|TestForceMergePolicy
+extends|extends
+name|LuceneTestCase
+block|{
+DECL|method|testForceMergePolicy
+specifier|public
+name|void
+name|testForceMergePolicy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MergePolicy
+name|mp
+init|=
+operator|new
+name|ForceMergePolicy
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|mp
+operator|.
+name|findMerges
+argument_list|(
+literal|null
+argument_list|,
+operator|(
+name|SegmentInfos
+operator|)
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+end_unit
